small HTML changes

--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
               <span class="toLocation">Posting To: gardenLog</span><br>
             </b></p>
 
-            Title: (Common Plant Name) <br>
+            Title: (Common Plant Name)<br>
             <input type="text" id="imputLogTitle"><br>
-            Strain: (Specific Plant Type) <br>
+            Strain: (Specific Plant Type)<br>
             <input type="text" id="imputLogStrain"><br>
             Harvest Notes: <br>
             <input type="text" id="imputLogHarvestNotes"><br>
-            Flags: (Important Things to Remember) <br>
+            Flags: (Important Things)<br>
             <input type="text" id="imputLogFlags"><br>
             Notes: <br>
             <textarea id="imputLogLongText" rows="4"></textarea><br> 
@@ -166,6 +166,7 @@
               </ul>
             <h3>To Do</h3>
               <ul>
+                <li>Add welcome message for naked database</li>
                 <li>Integrate with weather API</li>
               </ul>
           </div>
