fleshed out readme, Fixed undefiend field they no longer display

--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
             <input type="text" id="imputActionItems"><br>
             Workers: <br>
             <input type="text" id="imputActionWorkers"><br>
+            Atmospheric Condtions: <br>
+            <input type="text" id="imputActionWeather"><br>
             Notes: <br>
             <textarea id="imputActionLongText" rows="4"></textarea><br> 
             
