--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- FONTS -->
     <link href="//fonts.googleapis.com/css?family=Arvo|Open+Sans:400,300,600,700" rel="stylesheet" type="text/css" />
 
-    <title>Field Notes :: A Backlift App</title>
+    <title>Field Notes :: A Frymanet App</title>
 
   </head>
   <body>
@@ -29,7 +29,7 @@
       <!-- Head -->
       <div class="row">
         <div id="header" class="span12">
-          <h1><em>The </em>Field Notes App</h1>
+          <h1><em>The </em>Field Notes App <em>on</em> Frymanet.com</h1>
           <p>Log it here, so you can track it year after year</a></p>
 
           <p>
