--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <a class="quickNoteTrigger" href="#">[New Quick Note]</a>
             <a class="Q" 
               rel="popover"
-              data-trigger="hover"
+              data-trigger="click"
               data-placement="bottom" 
               data-content='These are the main logging buttons. Click on one and the form to add data will appear.'
               >[?]</a>
@@ -69,16 +69,16 @@
             <h2>Crop Log</h2>
 
             <p>
-              <a class="Q" 
-              rel="popover"
-              data-trigger="hover"
-              data-placement="left" 
-              data-content="This will post to the gardenLog by default. The location cannot be changed."
-              >[?]</a>
-            
               <b><!--default posting location will cannot be changed ATT-->
-              <span class="toLocation">Posting To: gardenLog</span><br>
-            </b></p>
+                <span class="toLocation">Posting To: gardenLog</span>&nbsp;
+              </b>
+              <a class="Q" 
+                rel="popover"
+                data-trigger="click"
+                data-placement="bottom" 
+                data-content="This will post to the gardenLog by default. This location cannot be changed."
+                >[?]</a>
+            </p>
 
             Title: (Common Plant Name)<br>
             <input type="text" id="imputLogTitle" class="input-block-level" placeholder="*Required"><br>
@@ -101,16 +101,16 @@
             <h2>Action Log</h2>
             
             <p>
+              <b><!-- default posting location will change if it is triggerd by function logAnAction() -->
+                <span class="toLocation" id="actionLogParent">Posting To: gardenLog</span>&nbsp;
+              </b>
               <a class="Q" 
-              rel="popover"
-              data-trigger="hover"
-              data-placement="left" 
-              data-content='By default all actions will post to gardenLog, If you wish to nest an action select "Log Action" under the desired post and the location will update.'
-              >[?]</a>
-
-            <b><!-- default posting location will change if it is triggerd by function logAnAction() -->
-              <span class="toLocation" id="actionLogParent">Posting To: gardenLog</span>
-            </b></p>
+                rel="popover"
+                data-trigger="click"
+                data-placement="bottom" 
+                data-content='By default all actions will post to gardenLog, If you wish to nest an action select "Log Action" under the desired post and the location will update.'
+                >[?]</a>
+            </p>
 
             <!--Default parent is gardenLog -->
             <input id="imputActionParentId" type="hidden" value="gardenLog">
@@ -142,16 +142,16 @@
             <h2>Quick Note</h2>
 
             <p>
+              <b><!-- default posting location is empty -->
+                <span class="toLocation" id="quickNoteParent">No location targeted</span>&nbsp;
+              </b>
               <a class="Q" 
-              rel="popover"
-              data-trigger="hover"
-              data-placement="left" 
-              data-content='To post a Quick Note you must either choose a location from the dropdown menu or select "Quick Note" under the desired post and the target location will update.'
-              >[?]</a>
-
-            <b><!-- default posting location is empty -->
-              <span class="toLocation" id="quickNoteParent">No location targeted</span><br>
-            </b></p>
+                rel="popover"
+                data-trigger="click"
+                data-placement="bottom" 
+                data-content='To post a Quick Note you must either choose a location from the dropdown menu or select "Quick Note" under the desired post and the target location will update.'
+                >[?]</a>
+            </p>
 
             <!--Default action is wait for imput from dropdown then set value-->
             <!-- this will be populated if a pass through post is activated  -->
@@ -196,6 +196,13 @@
             <h3>Crop Links</h3>
               <ul id="ulCropLinks">
               </ul>
+            <h3>Tools</h3>
+              <ul>
+                <li><a href="printView.html" target="_blank">Open Print View</a></li>
+                <li class="hidden-phone"><a id="hideShow_Show" class="hidden-phone">Show Delete Buttons</a> <a class="Q" rel="popover" data-trigger="click" data-placement="bottom" data-content='If you wish to delete a log entry, you can use this button to show all the red delete buttons. Upon click of a delete button the log entry will be removed immedeatly and cannot be retrieved. Use this carefully! When you are finished click on the "Hide Delete Buttons" link to ... hide the delete buttons.'>[?]</a>
+                  <a class="hideShow" id="hideShow_Hide"><br><b>Hide Delete Buttons</b></a>
+                </li>
+              </ul>
               &nbsp;
           </div>
 
@@ -208,13 +215,7 @@
 
           <div id="footer">
             <hr>
-            <p>Code by Christopher Fryman NSS2013 <a id="hideShow_Show" class="hidden-phone">[Show Delete Buttons]</a>
-              <a class="red hideShow" id="hideShow_Hide">[Hide Delete Buttons]</a> <a class="Q" 
-              rel="popover"
-              data-trigger="hover"
-              data-placement="top" 
-              data-content='If you wish to delete a log entry, you can use this button to show all the red delete buttons. The log entry will be deleted immedeatly and cannot be retrieved. Use this carefully! When you are finished click on the [Hide Delete Buttons] button to ... hide the delete buttons.'
-              >[?]</a></p>
+            <p>Code by Christopher Fryman NSS2013</p>
           </div>
 
         </div> <!-- END MAIN -->
